--- a/.github/workflows/chess.yml
+++ b/.github/workflows/chess.yml
@@ -421,7 +421,7 @@ jobs:
 
             **How this works**
 
-            When you click a link, it opens a GitHub Issue with the required pre-populated text. Just push "Create New Issue". That will trigger a [GitHub Actions](https://github.blog/2020-07-03-github-action-hero-casey-lee/#getting-started-with-github-actions) workflow that'll update my GitHub Profile _README.md_ with the new state of the board. Furthermore, you can't go twice in a row 
+            When you click a link, it opens a GitHub Issue with the required pre-populated text. Just push "Create New Issue". That will trigger a [GitHub Actions](https://github.blog/2020-07-03-github-action-hero-casey-lee/#getting-started-with-github-actions) workflow that'll update my GitHub Profile _README.md_ with the new state of the board. Furthermore, you can't go twice in a row. 
 
             **Notice a problem?**
 
