--- a/.github/workflows/chess.yml
+++ b/.github/workflows/chess.yml
@@ -356,7 +356,8 @@ jobs:
 
             ## [@BPower0036](https://github.com/BPower0036)'s and [@JohnyP36](https://github.com/JohnyP36)'s Chess Tournament
 
-            **#{game_state}** This is open to ANYONE to play the next move. That's the point. :wave:  It's your turn! Move a #{(game.board.active_color) ? 'black (solid)' : 'white (hollow)'} piece.
+            **#{game_state}** This is open to ANYONE to play the next move. That's the point. </br>
+            :wave:  It's your turn! Move a #{(game.board.active_color) ? 'black (solid)' : 'white (hollow)'} piece.
 
           HTML
 
