--- a/.github/workflows/delete_old_workflows.yml
+++ b/.github/workflows/delete_old_workflows.yml
@@ -1,5 +1,6 @@
 name: Delete old workflow runs
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 12 * * 3'
 
@@ -12,5 +13,5 @@ jobs:
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
-          retain_days: 15
+          retain_days: 7
           keep_minimum_runs: 6
