--- a/.github/workflows/delete_old_workflows.yml
+++ b/.github/workflows/delete_old_workflows.yml
@@ -13,5 +13,6 @@ jobs:
         with:
           token: ${{ github.token }}
           repository: ${{ github.repository }}
-          retain_days: 7
-          keep_minimum_runs: 6
+          older-than-seconds: 604.800
+          maximum-workflow-runs-to-keep: 7
+          
