--- a/.github/workflows/delete_old_workflows.yml
+++ b/.github/workflows/delete_old_workflows.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2
+        uses: MajorScruffy/delete-workflow-runs@v0.1.0
         with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
+          repository: BPower0036/chess
           older-than-seconds: 604.800
           maximum-workflow-runs-to-keep: 7
-          
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
