--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -17,3 +17,4 @@ jobs:
           token: ${{ secrets.AUTH_PAT }}
           repository: ${{ github.repository }}
           retain_days: ${{ github.event.inputs.days }}
+          keep_minimum_runs: 0
